--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -10,6 +10,8 @@
   <label>Nome: <input type="text" name="nome" required></label><br><br>
   <label>E-mail: <input type="email" name="email" required></label><br><br>
   <label>Senha: <input type="password" name="senha" required></label><br><br>
+  <label>Data de nascimento: <input type="date" name="dataNascimento" required></label><br><br>
+  <label>Nickname: <input type="text" name="nickname" required></label><br><br>
   <label>Assunto preferido:
     <select name="assunto" required>
       <option value="">--Selecione--</option>
@@ -21,6 +23,7 @@
   </label><br><br>
   <button type="submit">Cadastrar</button>
 </form>
+
   <br>
   <a href="/menu.html">Voltar ao Menu</a>
 </body>
