--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -7,11 +7,18 @@
 <body>
   <h1>Sala de Bate-papo</h1>
   <form method="POST" action="/batepapo">
-    <label>Escolha um assunto:
+    <label>
+      Seu Nickname:
+      <input type="text" name="nickname" required placeholder="Digite seu nickname" />
+    </label>
+    <br><br>
+    <label>
+      Escolha um assunto:
       <select name="assunto" required>
         <option value="">--Selecione--</option>
       </select>
     </label>
+    <br><br>
     <button>Ver mensagens</button>
   </form>
   <br>
