--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -16,6 +16,10 @@
       Escolha um assunto:
       <select name="assunto" required>
         <option value="">--Selecione--</option>
+        <option value="Futebol">Futebol</option>
+        <option value="Games">Games</option>
+        <option value="Carros">Carros</option>
+        <option value="Música">Música</option>
       </select>
     </label>
     <br><br>
