--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -2,28 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Sala de Bate-papo</title>
+  <title>Entrar no Bate-papo</title>
 </head>
 <body>
-  <h1>Sala de Bate-papo</h1>
+  <h1>Entrar no Bate-papo</h1>
   <form method="POST" action="/batepapo">
     <label>
       Seu Nickname:
       <input type="text" name="nickname" required placeholder="Digite seu nickname" />
     </label>
     <br><br>
-    <label>
-      Escolha um assunto:
-      <select name="assunto" required>
-        <option value="">--Selecione--</option>
-        <option value="Futebol">Futebol</option>
-        <option value="Games">Games</option>
-        <option value="Carros">Carros</option>
-        <option value="Música">Música</option>
-      </select>
-    </label>
-    <br><br>
-    <button>Ver mensagens</button>
+    <button>Entrar</button>
   </form>
   <br>
   <a href="/menu.html">Voltar ao menu</a>
