--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -2,17 +2,28 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Entrar no Bate-papo</title>
+  <title>Sala de Bate-papo</title>
 </head>
 <body>
-  <h1>Entrar no Bate-papo</h1>
+  <h1>Sala de Bate-papo</h1>
   <form method="POST" action="/batepapo">
     <label>
       Seu Nickname:
       <input type="text" name="nickname" required placeholder="Digite seu nickname" />
     </label>
     <br><br>
-    <button>Entrar</button>
+    <label>
+      Escolha um assunto:
+      <select name="assunto" required>
+        <option value="">--Selecione--</option>
+        <option value="Futebol">Futebol</option>
+        <option value="Games">Games</option>
+        <option value="Carros">Carros</option>
+        <option value="Música">Música</option>
+      </select>
+    </label>
+    <br><br>
+    <button>Entrar no bate-papo</button>
   </form>
   <br>
   <a href="/menu.html">Voltar ao menu</a>
