--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -3,13 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <title>Entrar no Bate-papo</title>
+  <script>
+    async function buscarAssunto() {
+      const nickname = document.getElementById('nickname').value.trim();
+      const assuntoInput = document.getElementById('assunto');
+
+      if (!nickname) {
+        assuntoInput.value = '';
+        assuntoInput.disabled = true;
+        return;
+      }
+
+      try {
+        const response = await fetch(`/buscarAssunto?nickname=${encodeURIComponent(nickname)}`);
+        if (response.ok) {
+          const data = await response.json();
+          if (data.assunto) {
+            assuntoInput.value = data.assunto;
+            assuntoInput.disabled = false;
+          } else {
+            assuntoInput.value = '';
+            assuntoInput.disabled = true;
+          }
+        } else {
+          assuntoInput.value = '';
+          assuntoInput.disabled = true;
+        }
+      } catch (error) {
+        assuntoInput.value = '';
+        assuntoInput.disabled = true;
+      }
+    }
+  </script>
 </head>
 <body>
   <h1>Entrar no Bate-papo</h1>
-  <form method="POST" action="/entrarBatepapo">
+  <form method="POST" action="/batepapo">
     <label>
       Seu Nickname:
-      <input type="text" name="nickname" required placeholder="Digite seu nickname cadastrado" />
+      <input type="text" id="nickname" name="nickname" required placeholder="Digite seu nickname cadastrado" onblur="buscarAssunto()" />
+    </label>
+    <br><br>
+    <label>
+      Assunto:
+      <input type="text" id="assunto" name="assunto" readonly placeholder="Assunto será preenchido automaticamente" disabled />
     </label>
     <br><br>
     <button>Entrar</button>
