--- a/paginas/batepapo.html
+++ b/paginas/batepapo.html
@@ -6,22 +6,20 @@
 </head>
 <body>
   <h1>Entrar no Bate-papo</h1>
-  <form method="POST" action="/entrarBatepapo">
+  <form method="POST" action="/batepapo">
     <label>
       Digite seu nickname:<br>
-      <input type="text" name="nickname" required placeholder="Seu nickname" />
+      <input type="text" name="nickname" required />
     </label>
     <br><br>
     <label>
-      Assunto:<br>
-      <select name="assunto">
+      Escolha um assunto:<br>
+      <select name="assunto" required>
         <option value="">--Selecione um assunto--</option>
-        <option value="Futebol">Futebol</option>
         <option value="Games">Games</option>
         <option value="Música">Música</option>
-        <option value="Filmes">Filmes</option>
+        <option value="Esportes">Esportes</option>
         <option value="Tecnologia">Tecnologia</option>
-        <option value="Outros">Outros</option>
       </select>
     </label>
     <br><br>
