--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Cadastro de Usuário</h1>
-  <form method="POST" action="/cadastrarUsuarios">
+  <form method="POST" action="/cadastroUsuarios">
   <label>Nome: <input type="text" name="nome" required></label><br><br>
   <label>E-mail: <input type="email" name="email" required></label><br><br>
   <label>Senha: <input type="password" name="senha" required></label><br><br>
